--- a/frontend/src/components/calendar/calendar.module.scss
+++ b/frontend/src/components/calendar/calendar.module.scss
@@ -102,6 +102,10 @@
     align-items: flex-start;
     height: 67px;
 
+    //&.active_time{
+    //    background-color: rgba(255, 180, 0, 0.4);
+    //}
+
     .hour{
         height: 100%;
         width: 36.5px;
@@ -144,4 +148,43 @@
     width: 100%;
     height: 33.5px;
     border-bottom: var(--borderStyle);
+}
+
+.event_wrapper{
+    width: 100%;
+    max-width: 100%;
+    background-color: #64B6F7;
+    //text-align: center;
+    display: flex;
+    align-items: center;
+    height: 32px;
+    padding: 0 10px;
+
+    &.day{
+        background-color: rgba(123, 198, 126, 0.5);
+        border: 1px solid rgba(0, 0, 0, 0.1);
+        position: relative;
+        padding-left: 23px;
+
+        &:before{
+            content: "";
+            position: absolute;
+            top: 0;
+            left: 10px;
+            width: 3px;
+            height: 100%;
+            background-color: #4CAF50;
+        }
+    }
+
+    .event_text{
+        text-overflow: ellipsis;
+        overflow: hidden;
+        white-space: nowrap;
+
+        font-size: 14px;
+        line-height: 20px;
+        letter-spacing: 0.15px;
+        color: rgba(0, 0, 0, 0.87);
+    }
 }
