--- a/frontend/src/views/main/index.module.scss
+++ b/frontend/src/views/main/index.module.scss
@@ -168,6 +168,10 @@
                             &:first-child{
                                 border-top: 0;
                             }
+
+                            &:last-child{
+                                border-bottom: 1px solid #616161;
+                            }
                         }
                     }
 
@@ -184,6 +188,10 @@
 
                             &:first-child{
                                 border-top: none;
+                            }
+
+                            &:last-child{
+                                border-bottom: 1px solid #616161;
                             }
 
                             .cell{
@@ -209,6 +217,11 @@
 
                                 &:nth-child(4){
                                     width: 28%;
+                                }
+
+                                &:nth-child(5){
+                                    width: 30px;
+                                    padding: 5px;
                                 }
 
                                 .checkbox_block{
@@ -255,6 +268,13 @@
                                             transition: 0.3s;
                                         }
                                     }
+                                }
+
+                                .status_block{
+                                    width: 20px;
+                                    height: 20px;
+                                    border-radius: 50%;
+                                    background-color: #4CAF50;
                                 }
                             }
                         }
