--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -19,6 +19,11 @@ code {
     monospace;
 }
 
+#root.main_root{
+    max-width: 1920px;
+    margin: 0 auto;
+}
+
 .header_dropdown_hidden .title{
     padding-top: 22px;
     padding-left: 30px;
@@ -77,7 +82,7 @@ code {
 }
 
 .calendar_block .rbc-time-header .rbc-time-header-content .rbc-allday-cell{
-    display: none;
+    /*display: none;*/
 }
 
 .calendar_block .rbc-time-header .rbc-time-header-content .rbc-row.rbc-time-header-cell .rbc-header{
