--- a/frontend/src/views/main/index.module.scss
+++ b/frontend/src/views/main/index.module.scss
@@ -94,7 +94,8 @@
       justify-content: center;
       flex-direction: column;
       margin-bottom: 10px;
-
+      cursor: pointer;
+      
       &.active {
         background-color: #64B6F7;
 
