Creating Patient successfully

--- a/frontend/src/views/PatientsDirectory/patientsDirectory.module.scss
+++ b/frontend/src/views/PatientsDirectory/patientsDirectory.module.scss
@@ -63,3 +63,9 @@
 .selectedDoctor{
   background-color: #61616123;
 }
+.popover{
+  button{
+    margin-left: 16px;
+    margin-bottom: 16px;
+  }
+}
