Prettier run for all new files

--- a/frontend/src/views/PatientsDirectory/createPatient.module.scss
+++ b/frontend/src/views/PatientsDirectory/createPatient.module.scss
@@ -44,7 +44,7 @@
   align-items: center;
   justify-content: space-between;
   padding: 20px 0;
-  border-bottom: 1px solid #BDBDBD;
+  border-bottom: 1px solid #bdbdbd;
   margin-bottom: 10px;
 }
 
@@ -62,12 +62,12 @@
   }
 }
 
-.header_actions{
+.header_actions {
   margin-left: 10px !important;
-  svg{
+  svg {
     margin-right: 10px;
   }
-  path{
+  path {
     stroke: white;
   }
 }
