--- a/frontend/src/views/paymentByPatient/paymentModal.module.scss
+++ b/frontend/src/views/paymentByPatient/paymentModal.module.scss
@@ -1,8 +1,7 @@
 .modalWrapper {
   background: #ffffff;
   border: 1px solid rgba(0, 0, 0, 0.23);
-  box-shadow: 0px 2px 4px -1px rgba(0, 0, 0, 0.2),
-    0px 4px 5px rgba(0, 0, 0, 0.14), 0px 1px 10px rgba(0, 0, 0, 0.12);
+  box-shadow: 0px 2px 4px -1px rgba(0, 0, 0, 0.2), 0px 4px 5px rgba(0, 0, 0, 0.14), 0px 1px 10px rgba(0, 0, 0, 0.12);
   border-radius: 4px;
   position: absolute;
   top: 50%;
