update doctor list and appointment components

--- a/frontend/src/views/createNote/index.module.scss
+++ b/frontend/src/views/createNote/index.module.scss
@@ -263,7 +263,7 @@ $pationsTableRight2: 40px 531px 62px;
 
             .table_row{
                 display: flex;
-                align-items: center;
+                // align-items: center;
                 justify-content: space-between;
                 padding-top: 10px;
 
@@ -281,7 +281,7 @@ $pationsTableRight2: 40px 531px 62px;
                 }
 
                 .input_block{
-                    height: 32px;
+                    // height: 32px;
 
                     div[class~="MuiInputBase-root"]{
                         padding: 0;
