--- a/frontend/src/views/cheque/cheque.module.scss
+++ b/frontend/src/views/cheque/cheque.module.scss
@@ -34,6 +34,7 @@
 }
 .dashedBorder {
     border-bottom: 1px dashed rgb(24, 24, 24);
+    padding-bottom: 95px;
 }
 .textRow {
     line-height: 1.7;
@@ -82,4 +83,11 @@
 .flex{
     display: flex;
     justify-content: space-between;
+}
+.relative{
+    position: relative;
+}
+.absolute {
+    position: absolute;
+    right: 0;
 }
