--- a/frontend/src/containers/quickAppointment/quickAppointment.module.scss
+++ b/frontend/src/containers/quickAppointment/quickAppointment.module.scss
@@ -125,7 +125,8 @@
   box-shadow: 0 0 0 0.5px #616161;
   height: 100%;
   overflow-y: auto;
-
+  height: 400px;
+  
   .row {
     width: 100%;
     display: flex;
