--- a/frontend/src/views/mergePatients/mergePatient.module.scss
+++ b/frontend/src/views/mergePatients/mergePatient.module.scss
@@ -35,7 +35,9 @@
   }
 }
 .table {
-  min-height: 300px;
+  min-height: 400px;
+  max-height: 500px;
+  overflow: scroll;
 }
 .clonedPatientsWrapper {
 }
