--- a/backend/apps/warehouse/templates/warehouse/login.html
+++ b/backend/apps/warehouse/templates/warehouse/login.html
@@ -1,10 +1,11 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="/assets/css/style.css" />
+    <link rel="stylesheet" href="{% static 'assets/css/style.css' %}" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -36,7 +37,7 @@
                 placeholder="Password"
               />
               <label for="floatingPassword">Пароль</label>
-              <img id="togglePassword" src="/assets/icons/eye.svg" alt="icon" />
+              <img id="togglePassword" src="{% static 'assets/icons/eye.svg' %}" alt="icon" />
             </div>
             <div class="form-bottom">
               <div class="form-check">
@@ -52,13 +53,13 @@
               <a href="">Забыли пароль ?</a>
             </div>
             <button type="submit" id="loginButton">
-              <a href="/index.html">Вход в систему</a>
+              <a href="{% url 'warehouse:warehouse-index' %}">Вход в систему</a>
             </button>
           </form>
         </div>
       </div>
       <div class="login-right">
-        <img src="/assets/imgs/login-img.png" alt="icons" />
+        <img src="{% static 'assets/imgs/login-img.png' %}" alt="icons" />
       </div>
     </div>
 
@@ -68,6 +69,6 @@
       integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
       crossorigin="anonymous"
     ></script>
-    <script src="/assets/js/script.js"></script>
+    <script src="{% static '/assets/js/script.js'%}"></script>
   </body>
 </html>
