--- a/backend/apps/warehouse/templates/warehouse/index.html
+++ b/backend/apps/warehouse/templates/warehouse/index.html
@@ -2,253 +2,243 @@
 
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<head>
+    <meta charset="UTF-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>Document</title>
-    <link rel="stylesheet" href="{% static '/assets/css/style.css' %}" />
+    <link rel="stylesheet" href="{% static '/assets/css/style.css' %}"/>
     <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM"
-      crossorigin="anonymous"
+            href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
+            rel="stylesheet"
+            integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM"
+            crossorigin="anonymous"
     />
-  </head>
-  <body>
-    <!-- header starts ==== -->
-    <header>
-      <div class="header-left">
+</head>
+<body>
+<!-- header starts ==== -->
+<header>
+    <div class="header-left">
         <div class="logo">
-          <img src="{% static '/assets/icons/logo.svg' %}" alt="logo" />
+            <img src="{% static '/assets/icons/logo.svg' %}" alt="logo"/>
         </div>
         <div class="header-links">
-          <div class="header-link header-link-active">
-            <a href="">филиалы</a>
-          </div>
-          <div class="header-link">
-            <a href="">Отчёт</a>
-          </div>
-        </div>
-      </div>
-      <div class="header-right">
-        <div class="dropdown">
-          <button
-            class="dropdown-toggle profile-btn"
-            type="button"
-            data-bs-toggle="dropdown"
-            aria-expanded="false"
-          >
-            Вадим Александров
-          </button>
-          <ul class="dropdown-menu">
-            <li><a class="dropdown-item" href="{% url 'warehouse:warehouse-login' %}">Выйти</a></li>
-          </ul>
-        </div>
-      </div>
-    </header>
-    <!-- header ends === -->
-
-    <!-- navbar starts ===== -->
-    <nav>
-      <a href="/medicines.html" class="nav-link">
-        <img src="{% static '/assets/icons/briefcase-medical.svg' %}" alt="icon" />
-        <p>
-          Реестр <br />
-          лекарств
-        </p>
-      </a>
-      <a href="/income.html" class="nav-link">
-        <img src="{% static '/assets/icons/arrow-down-to-square.svg' %}" alt="icon" />
-        <p>
-          Реестр <br />
-          прихода
-        </p>
-      </a>
-      <a href="" class="nav-link">
-        <img src="{% static '/assets/icons/arrow-up-from-square.svg' %}" alt="icon" />
-        <p>
-          Реестр <br />
-          расхода
-        </p>
-      </a>
-    </nav>
-    <!-- navbar ends ===== -->
-
-    <!-- main starts ==== -->
-    <main>
-      <div class="main-left">
-        <div class="main-left-input">
-          <label for="">Филиал</label>
-          <div class="main-left-menu">
-            <input type="text" />
-            <button data-bs-target="#exampleModalToggle" data-bs-toggle="modal">
-              <img src="{% static '/assets/icons/book.svg' %}" alt="icon" />
-            </button>
-            <button>
-              <img src="{% static '/assets/icons/close-square.svg' %}" alt="icon" />
-            </button>
-          </div>
-        </div>
-        <div class="main-left-input">
-          <label for="">Перемещение</label>
-          <div class="main-left-menu">
-            <input type="text" />
-            <button>
-              <img src="{% static '/assets/icons/book.svg' %}" alt="icon" />
-            </button>
-            <button>
-              <img src="{% static '/assets/icons/search.svg' %}" alt="icon" />
-            </button>
-            <button>
-              <img src="{% static '/assets/icons/wallet-money.svg' %}" alt="icon" />
-            </button>
-          </div>
-        </div>
-        <div class="main-left-input">
-          <label for="">Приходы</label>
-          <div class="main-left-menu">
-            <input type="text" />
-            <button>
-              <img src="{% static '/assets/icons/book.svg' %}" alt="icon" />
-            </button>
-            <button>
-              <img src="{% static '/assets/icons/search.svg' %}" alt="icon" />
-            </button>
-            <button>
-              <img src="{% static '/assets/icons/wallet-money.svg' %}" alt="icon" />
-            </button>
-          </div>
-        </div>
-        <div class="main-left-input">
-          <label for="">Оптовая торговля</label>
-          <div class="main-left-menu">
-            <input type="text" />
-            <button>
-              <img src="{% static '/assets/icons/book.svg' %}" alt="icon" />
-            </button>
-            <button>
-              <img src="{% static '/assets/icons/search.svg' %}" alt="icon" />
-            </button>
-            <button>
-              <img src="{% static '/assets/icons/wallet-money.svg' %}" alt="icon" />
-            </button>
-          </div>
-        </div>
-        <div class="main-left-input">
-          <label for="">Розничная торговля</label>
-          <div class="main-left-menu">
-            <input type="text" />
-            <button>
-              <img src="{% static '/assets/icons/book.svg' %}" alt="icon" />
-            </button>
-            <button>
-              <img src="{% static '/assets/icons/search.svg' %}" alt="icon" />
-            </button>
-            <button>
-              <img src="{% static '/assets/icons/wallet-money.svg' %}" alt="icon" />
-            </button>
-          </div>
-        </div>
-      </div>
-      <div class="main-right">
-        <table>
-          <tr>
-            <th></th>
-            <th>Наименование</th>
-            <th>Дата</th>
-          </tr>
-          <tr>
-            <td style="width: 35px"></td>
-            <td>...</td>
-            <td>01.05.2021</td>
-          </tr>
-          <tr>
-            <td><img src="{% static '/assets/icons/row-left-mini.svg' %}" alt="" /></td>
-            <td>Hayat Medical filial</td>
-            <td>03.02.2023</td>
-          </tr>
-          <tr>
-            <td><img src="{% static '/assets/icons/row-left-mini.svg' %}" alt="" /></td>
-            <td>Hayat medical main</td>
-            <td>03.02.2023</td>
-          </tr>
-          <tr>
-            <td><img src="{% static '/assets/icons/row-left-mini.svg' %}" alt="" /></td>
-            <td>Hayat Medical filial 2 операционной</td>
-            <td>03.02.2023</td>
-          </tr>
-        </table>
-      </div>
-    </main>
-    <!-- office modal starts ================ -->
-    <div
-      class="modal fade w-100"
-      id="exampleModalToggle"
-      aria-hidden="true"
-      tabindex="-1"
-    >
-      <div class="modal-dialog modal-dialog-centered">
-        <div class="modal-content">
-          <div class="modal-header">
-            <h1 class="modal-title fs-5" id="exampleModalToggleLabel">
-              Выбор из справочника
-            </h1>
-            <button
-              class="bg-transparent border-0"
-              type="button"
-              data-bs-dismiss="modal"
-            >
-              <img src="{% static '/assets/icons/close-circle.svg' %}" alt="icon" />
-            </button>
-          </div>
-          <div class="modal-body">
-            <div class="modal-body-top">
-              <img src="{% static '/assets/icons/search-normal.svg' %}" alt="icon" />
-              <input
-                class="border-0"
-                type="text"
-                placeholder="Поиск по таблице"
-              />
+            <div class="header-link header-link-active">
+                <a href="">филиалы</a>
             </div>
-            <table>
-              <tr>
+            <div class="header-link">
+                <a href="">Отчёт</a>
+            </div>
+        </div>
+    </div>
+    <div class="header-right">
+        <div class="dropdown">
+            <button
+                    class="dropdown-toggle profile-btn"
+                    type="button"
+                    data-bs-toggle="dropdown"
+                    aria-expanded="false"
+            >
+                {{ user.l_name }} {{ user.f_name }}
+            </button>
+            <ul class="dropdown-menu">
+                <li><a class="dropdown-item" href="{% url 'warehouse:warehouse-logout' %}">Выйти</a></li>
+            </ul>
+        </div>
+    </div>
+</header>
+<!-- header ends === -->
+
+<!-- navbar starts ===== -->
+<nav>
+    <a href="/medicines.html" class="nav-link">
+        <img src="{% static '/assets/icons/briefcase-medical.svg' %}" alt="icon"/>
+        <p>
+            Реестр <br/>
+            лекарств
+        </p>
+    </a>
+    <a href="/income.html" class="nav-link">
+        <img src="{% static '/assets/icons/arrow-down-to-square.svg' %}" alt="icon"/>
+        <p>
+            Реестр <br/>
+            прихода
+        </p>
+    </a>
+    <a href="" class="nav-link">
+        <img src="{% static '/assets/icons/arrow-up-from-square.svg' %}" alt="icon"/>
+        <p>
+            Реестр <br/>
+            расхода
+        </p>
+    </a>
+</nav>
+<!-- navbar ends ===== -->
+
+<!-- main starts ==== -->
+<main>
+    <div class="main-left">
+        <div class="main-left-input">
+            <label for="">Филиал</label>
+            <div class="main-left-menu">
+                <input type="text"/>
+                <button data-bs-target="#exampleModalToggle" data-bs-toggle="modal">
+                    <img src="{% static '/assets/icons/book.svg' %}" alt="icon"/>
+                </button>
+                <button>
+                    <img src="{% static '/assets/icons/close-square.svg' %}" alt="icon"/>
+                </button>
+            </div>
+        </div>
+        <div class="main-left-input">
+            <label for="">Перемещение</label>
+            <div class="main-left-menu">
+                <input type="text"/>
+                <button>
+                    <img src="{% static '/assets/icons/book.svg' %}" alt="icon"/>
+                </button>
+                <button>
+                    <img src="{% static '/assets/icons/search.svg' %}" alt="icon"/>
+                </button>
+                <button>
+                    <img src="{% static '/assets/icons/wallet-money.svg' %}" alt="icon"/>
+                </button>
+            </div>
+        </div>
+        <div class="main-left-input">
+            <label for="">Приходы</label>
+            <div class="main-left-menu">
+                <input type="text"/>
+                <button>
+                    <img src="{% static '/assets/icons/book.svg' %}" alt="icon"/>
+                </button>
+                <button>
+                    <img src="{% static '/assets/icons/search.svg' %}" alt="icon"/>
+                </button>
+                <button>
+                    <img src="{% static '/assets/icons/wallet-money.svg' %}" alt="icon"/>
+                </button>
+            </div>
+        </div>
+        <div class="main-left-input">
+            <label for="">Оптовая торговля</label>
+            <div class="main-left-menu">
+                <input type="text"/>
+                <button>
+                    <img src="{% static '/assets/icons/book.svg' %}" alt="icon"/>
+                </button>
+                <button>
+                    <img src="{% static '/assets/icons/search.svg' %}" alt="icon"/>
+                </button>
+                <button>
+                    <img src="{% static '/assets/icons/wallet-money.svg' %}" alt="icon"/>
+                </button>
+            </div>
+        </div>
+        <div class="main-left-input">
+            <label for="">Розничная торговля</label>
+            <div class="main-left-menu">
+                <input type="text"/>
+                <button>
+                    <img src="{% static '/assets/icons/book.svg' %}" alt="icon"/>
+                </button>
+                <button>
+                    <img src="{% static '/assets/icons/search.svg' %}" alt="icon"/>
+                </button>
+                <button>
+                    <img src="{% static '/assets/icons/wallet-money.svg' %}" alt="icon"/>
+                </button>
+            </div>
+        </div>
+    </div>
+    <div class="main-right">
+        <table>
+            <tr>
                 <th></th>
                 <th>Наименование</th>
-              </tr>
-              <tr>
-                <td style="width: 35px">
-                  <img src="{% static '/assets/icons/row-left-mini.svg' %}" alt="" />
-                </td>
-                <td>--------</td>
-              </tr>
-              <tr data-bs-target="#exampleModalToggle2" data-bs-toggle="modal">
-                <td><img src="{% static '/assets/icons/row-left-mini.svg' %}" alt="" /></td>
+                <th>Дата</th>
+            </tr>
+            <tr>
+                <td style="width: 35px"></td>
+                <td>...</td>
+                <td>01.05.2021</td>
+            </tr>
+            <tr>
+                <td><img src="{% static '/assets/icons/row-left-mini.svg' %}" alt=""/></td>
                 <td>Hayat Medical filial</td>
-              </tr>
-              <tr data-bs-target="#exampleModalToggle2" data-bs-toggle="modal">
-                <td><img src="{% static '/assets/icons/row-left-mini.svg' %}" alt="" /></td>
+                <td>03.02.2023</td>
+            </tr>
+            <tr>
+                <td><img src="{% static '/assets/icons/row-left-mini.svg' %}" alt=""/></td>
                 <td>Hayat medical main</td>
-              </tr>
-              <tr data-bs-target="#exampleModalToggle2" data-bs-toggle="modal">
-                <td><img src="{% static '/assets/icons/row-left-mini.svg' %}" alt="" /></td>
+                <td>03.02.2023</td>
+            </tr>
+            <tr>
+                <td><img src="{% static '/assets/icons/row-left-mini.svg' %}" alt=""/></td>
                 <td>Hayat Medical filial 2 операционной</td>
-              </tr>
-            </table>
-          </div>
-        </div>
-      </div>
+                <td>03.02.2023</td>
+            </tr>
+        </table>
     </div>
-    <!-- office modal ends ========= -->
-    <!-- main ends ==== -->
+</main>
+<!-- office modal starts ================ -->
+<div
+        class="modal fade w-100"
+        id="exampleModalToggle"
+        aria-hidden="true"
+        tabindex="-1"
+>
+    <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h1 class="modal-title fs-5" id="exampleModalToggleLabel">
+                    Выбор из справочника
+                </h1>
+                <button
+                        class="bg-transparent border-0"
+                        type="button"
+                        data-bs-dismiss="modal"
+                >
+                    <img src="{% static '/assets/icons/close-circle.svg' %}" alt="icon"/>
+                </button>
+            </div>
+            <div class="modal-body">
+                <div class="modal-body-top">
+                    <img src="{% static '/assets/icons/search-normal.svg' %}" alt="icon"/>
+                    <input
+                            class="border-0"
+                            type="text"
+                            placeholder="Поиск по таблице"
+                    />
+                </div>
+                <table>
+                    <tr>
+                        <th></th>
+                        <th>Наименование</th>
+                    </tr>
+                    {% for org in orgs %}
+                    <tr>
+                        <td style="width: 35px">
+                            <img src="{% static '/assets/icons/row-left-mini.svg' %}" alt=""/>
+                        </td>
+                        <td>{{ org.name }}</td>
+                    </tr>
+                    {% endfor %}
+                </table>
+            </div>
+        </div>
+    </div>
+</div>
+<!-- office modal ends ========= -->
+<!-- main ends ==== -->
 
-    <!-- script bootstrap ==== -->
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
-      crossorigin="anonymous"
-    ></script>
+<!-- script bootstrap ==== -->
+<script
+        src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
+        crossorigin="anonymous"
+></script>
 
-    <!-- script js ===== -->
-    <script src="{% static '/assets/js/script.js' %}"></script>
-  </body>
+<!-- script js ===== -->
+<script src="{% static '/assets/js/script.js' %}"></script>
+</body>
 </html>
