--- a/backend/apps/warehouse/templates/warehouse/login.html
+++ b/backend/apps/warehouse/templates/warehouse/login.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Login</title>
     <link rel="stylesheet" href="{% static 'assets/css/style.css' %}" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
@@ -19,10 +19,13 @@
         <div class="login-form">
           <h1>Вход в систему Склад</h1>
           <h2>Hayat Medical Center</h2>
-          <form action="" class="mt-3">
+          <form method="POST" action="{% url 'warehouse:warehouse-login' %}"  class="mt-3">
+            {% csrf_token %}
+
             <div class="form-floating mb-3 w-100">
               <input
                 type="email"
+                name="email"
                 class="form-control"
                 id="floatingInput"
                 placeholder="name@example.com"
@@ -32,6 +35,7 @@
             <div class="form-floating w-100">
               <input
                 type="password"
+                name="password"
                 class="form-control"
                 id="floatingPassword"
                 placeholder="Password"
@@ -53,7 +57,8 @@
               <a href="">Забыли пароль ?</a>
             </div>
             <button type="submit" id="loginButton">
-              <a href="{% url 'warehouse:warehouse-index' %}">Вход в систему</a>
+{#              <a href="{% url 'warehouse:warehouse-login' %}">Вход в систему</a>#}
+                Вход в систему
             </button>
           </form>
         </div>
