--- a/backend/apps/warehouse/templates/warehouse/medicines.html
+++ b/backend/apps/warehouse/templates/warehouse/medicines.html
@@ -1,226 +1,191 @@
 {% load static %}
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-    <link rel="stylesheet" href="{% static "/assets/css/style.css" %}" />
+<head>
+    <meta charset="UTF-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <title>Medicines</title>
+    <link rel="stylesheet" href="{% static "/assets/css/style.css" %}"/>
     <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM"
-      crossorigin="anonymous"
+            href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
+            rel="stylesheet"
+            integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM"
+            crossorigin="anonymous"
     />
-  </head>
-  <body>
-    <!-- header starts ==== -->
-    <header>
-      <div class="header-left">
+</head>
+<body>
+<!-- header starts ==== -->
+<header>
+    <div class="header-left">
         <div class="logo">
             <a href="{% url 'warehouse:warehouse-index' %}">
-              <img src="{% static "/assets/icons/logo.svg" %}" alt="logo" />
+                <img src="{% static "/assets/icons/logo.svg" %}" alt="logo"/>
             </a>
         </div>
         <div class="header-links">
-          <div class="header-link header-link-active">
-            <a href="">филиалы</a>
-          </div>
-          <div class="header-link">
-            <a href="">Отчёт</a>
-          </div>
+            <div class="header-link header-link-active">
+                <a href="">филиалы</a>
+            </div>
+            <div class="header-link">
+                <a href="">Отчёт</a>
+            </div>
         </div>
-      </div>
-      <div class="header-right">
-        <div class="dropdown">
-          <button
-            class="dropdown-toggle profile-btn"
-            type="button"
-            data-bs-toggle="dropdown"
-            aria-expanded="false"
-          >
-            Вадим Александров
-          </button>
-          <ul class="dropdown-menu">
-            <li><a class="dropdown-item" href="{% url 'warehouse:warehouse-login' %}">Выйти</a></li>
-          </ul>
-        </div>
-      </div>
-    </header>
-    <!-- header ends === -->
-
-    <!-- navigation starts ====== -->
-    <div class="navigation">
-      <a href="{% url 'warehouse:warehouse-index' %}">
-        <img src="{% static "/assets/icons/arrow-circle-left.svg" %}" alt="icon" />
-        Реестр лекарств - Информация о товаре
-      </a>
     </div>
-    <!-- navigation ends ====== -->
+    <div class="header-right">
+        <div class="dropdown">
+            <button
+                    class="dropdown-toggle profile-btn"
+                    type="button"
+                    data-bs-toggle="dropdown"
+                    aria-expanded="false"
+            >
+                {{ user.l_name }} {{ user.f_name }}
+            </button>
+            <ul class="dropdown-menu">
+                <li><a class="dropdown-item" href="{% url 'warehouse:warehouse-login' %}">Выйти</a></li>
+            </ul>
+        </div>
+    </div>
+</header>
+<!-- header ends === -->
 
-    <!-- medicines starts ======================== -->
-    <div class="medicines">
-      <div class="medicines-top">
+<!-- navigation starts ====== -->
+<div class="navigation">
+    <a href="{% url 'warehouse:warehouse-index' %}">
+        <img src="{% static "/assets/icons/arrow-circle-left.svg" %}" alt="icon"/>
+        Реестр лекарств - Информация о товаре
+    </a>
+</div>
+<!-- navigation ends ====== -->
+
+<!-- medicines starts ======================== -->
+<div class="medicines">
+    <div class="medicines-top">
         <table>
-          <!-- table head starts ===== -->
-          <thead>
+            <!-- table head starts ===== -->
+            <thead>
             <tr class="table-head">
-              <th></th>
-              <th>Код</th>
-              <th>Наименование</th>
-              <th>Производитель</th>
-              <th>
-                Ед. <br />
-                измер
-              </th>
-              <th>№</th>
-              <th>Остаток</th>
-              <th>
-                Цена <br />
-                Розничная 1
-              </th>
+                <th></th>
+                <th>Код</th>
+                <th>Наименование</th>
+                <th>Производитель</th>
+                <th>
+                    Ед. <br/>
+                    измер
+                </th>
+                <th>№</th>
+                <th>Остаток</th>
+                <th>
+                    Цена <br/>
+                    Розничная 1
+                </th>
             </tr>
-          </thead>
-          <!-- table head ends ===== -->
+            </thead>
+            <!-- table head ends ===== -->
 
-          <!-- table body starts ========== -->
-          <tbody>
-            <tr class="table-body">
-              <td style="width: 35px">
-                <img src="{% static "/assets/icons/row-left-mini.svg" %}" alt="" />
-              </td>
-              <td>2046</td>
-              <td>5-НОК 50МГ ТАБ N=50</td>
-              <td>ЛЕК Д.Д, СЛОВЕНИЯ</td>
-              <td>уп</td>
-              <td style="text-align: end">50</td>
-              <td style="text-align: end">0</td>
-              <td style="text-align: end">0.00</td>
-            </tr>
-            <tr class="table-body">
-              <td><img src="{% static "/assets/icons/row-left-mini.svg" %}" alt="" /></td>
-              <td>2046</td>
-              <td>ФУРОСЕМИД Р.Р 10МГ/МЛ 2МЛ АМП NE1O</td>
-              <td>ДАЛЬХИМФАРМ, РОССИЯ</td>
-              <td>уп</td>
-              <td style="text-align: end">10</td>
-              <td style="text-align: end">0</td>
-              <td style="text-align: end">0.00</td>
-            </tr>
-            <tr class="table-body">
-              <td><img src="{% static "/assets/icons/row-left-mini.svg" %}" alt="" /></td>
-              <td>2046</td>
-              <td>АКТОВЕГИН 40МГ/5МЛ АМП N°5</td>
-              <td>ТАКЕ ЛА ЯРОСЛАВЛ РОССИЯ</td>
-              <td>уп</td>
-              <td style="text-align: end">23</td>
-              <td style="text-align: end">52</td>
-              <td style="text-align: end">0.00</td>
-            </tr>
-            <tr class="table-body">
-              <td><img src="{% static "/assets/icons/row-left-mini.svg" %}" alt="" /></td>
-              <td>2046</td>
-              <td>АКТОВЕГИН 40МГ/5МЛ АМП N°5</td>
-              <td>ТАКЕ ЛА ЯРОСЛАВЛ РОССИЯ</td>
-              <td>уп</td>
-              <td style="text-align: end">23</td>
-              <td style="text-align: end">52</td>
-              <td style="text-align: end">0.00</td>
-            </tr>
-            <tr class="table-body">
-              <td><img src="{% static "/assets/icons/row-left-mini.svg" %}" alt="" /></td>
-              <td>2046</td>
-              <td>АКТОВЕГИН 40МГ/5МЛ АМП N°5</td>
-              <td>ТАКЕ ЛА ЯРОСЛАВЛ РОССИЯ</td>
-              <td>уп</td>
-              <td style="text-align: end">23</td>
-              <td style="text-align: end">52</td>
-              <td style="text-align: end">0.00</td>
-            </tr>
-          </tbody>
+            <!-- table body starts ========== -->
+            <tbody>
+            {% for item in items %}
+                    <tr class="table-body">
+                        <td style="width: 35px">
+                            <img src="{% static "/assets/icons/row-left-mini.svg" %}" alt=""/>
+                        </td>
+                        <td>{{ item.id }}</td>
+                        <td>{{ item.name }}</td>
+                        <td>{{ item.company.name }}</td>
+                        <td>{{ item.unit }}</td>
+                        <td style="text-align: end">{{ item.in_pack }}</td>
+                        <td style="text-align: end">{{ item.in_stock.first.quantity }}</td>
+                <a href="{% url 'warehouse:warehouse-medicines' item.id %}">
+                        <td style="text-align: end">{{ item.price }}</td>
+                </a>
+                    </tr>
+            {% endfor %}
 
-          <!-- table body ends ======= -->
+            </tbody>
 
-          <!-- table footer starts ============ -->
-          <tfoot>
+            <!-- table body ends ======= -->
+
+            <!-- table footer starts ============ -->
+            <tfoot>
             <tr class="table-footer">
-              <td style="width: 35px"></td>
-              <td></td>
-              <td></td>
-              <td></td>
-              <td></td>
-              <td style="text-align: end"></td>
-              <td style="text-align: end"></td>
-              <td style="text-align: end"></td>
+                <td style="width: 35px"></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td style="text-align: end"></td>
+                <td style="text-align: end"></td>
+                <td style="text-align: end"></td>
             </tr>
-          </tfoot>
+            </tfoot>
 
-          <!-- table footer ends ========= -->
+            <!-- table footer ends ========= -->
         </table>
-      </div>
-      <div class="medicines-bottom">
+    </div>
+    <div class="medicines-bottom">
         <table>
-          <!-- table head starts ======== -->
-          <thead>
+            <!-- table head starts ======== -->
+            <thead>
             <tr class="table-head">
-              <th></th>
-              <th>Филиал</th>
-              <th>Наименование</th>
-              <th>Кол-Bo</th>
-              <th>Цена 1</th>
-              <th>Время</th>
+                <th></th>
+                <th>Филиал</th>
+                <th>Наименование</th>
+                <th>Кол-Bo</th>
+                <th>Цена 1</th>
+                <th>Время</th>
             </tr>
-          </thead>
-          <!-- table head ends ======== -->
+            </thead>
+            <!-- table head ends ======== -->
 
-          <tbody>
+            <tbody>
             <!-- table body starts ======================= -->
             <tr class="table-body">
-              <td style="width: 35px">
-                <img src="{% static "/assets/icons/row-left-mini.svg" %}" alt="" />
-              </td>
-              <td>HAYAT MEDICAL MAIN</td>
-              <td>АМИНОКАПРОНОВАЯ КИСЛОТА 100МЛ \ юРия ФАРМА УКРАИНА</td>
-              <td>1</td>
-              <td>318 363.00</td>
-              <td style="text-align: end">04.02.2023 11:06:21</td>
+                <td style="width: 35px">
+                    <img src="{% static "/assets/icons/row-left-mini.svg" %}" alt=""/>
+                </td>
+                <td>HAYAT MEDICAL MAIN</td>
+                <td>АМИНОКАПРОНОВАЯ КИСЛОТА 100МЛ \ юРия ФАРМА УКРАИНА</td>
+                <td>1</td>
+                <td>318 363.00</td>
+                <td style="text-align: end">04.02.2023 11:06:21</td>
             </tr>
             <tr class="table-body">
-              <td style="width: 35px">
-                <img src="{% static "/assets/icons/row-left-mini.svg" %}" alt="" />
-              </td>
-              <td>HAYAT MEDICAL MAIN</td>
-              <td>АМИНОКАПРОНОВАЯ КИСЛОТА 100МЛ \ юРия ФАРМА УКРАИНА</td>
-              <td>1</td>
-              <td>318 363.00</td>
-              <td style="text-align: end">04.02.2023 11:06:21</td>
+                <td style="width: 35px">
+                    <img src="{% static "/assets/icons/row-left-mini.svg" %}" alt=""/>
+                </td>
+                <td>HAYAT MEDICAL MAIN</td>
+                <td>АМИНОКАПРОНОВАЯ КИСЛОТА 100МЛ \ юРия ФАРМА УКРАИНА</td>
+                <td>1</td>
+                <td>318 363.00</td>
+                <td style="text-align: end">04.02.2023 11:06:21</td>
             </tr>
-          </tbody>
-          <!-- table body ends ======================= -->
+            </tbody>
+            <!-- table body ends ======================= -->
 
-          <!-- table footer starts ============= -->
-          <tfoot>
+            <!-- table footer starts ============= -->
+            <tfoot>
             <tr class="table-footer">
-              <td style="width: 35px"></td>
-              <td></td>
-              <td></td>
-              <td></td>
-              <td></td>
-              <td style="text-align: end"></td>
+                <td style="width: 35px"></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td style="text-align: end"></td>
             </tr>
-          </tfoot>
-          <!-- table footer ends ============= -->
+            </tfoot>
+            <!-- table footer ends ============= -->
         </table>
-      </div>
     </div>
-    <!-- medicines ends ======================== -->
+</div>
+<!-- medicines ends ======================== -->
 
-    <!-- script js ================== -->
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
-      crossorigin="anonymous"
-    ></script>
-    <script src="{% static "/assets/js/script.js" %}"></script>
-  </body>
+<!-- script js ================== -->
+<script
+        src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
+        crossorigin="anonymous"
+></script>
+<script src="{% static "/assets/js/script.js" %}"></script>
+</body>
 </html>
