--- a/backend/static/assets/css/style.css
+++ b/backend/static/assets/css/style.css
@@ -3,12 +3,7 @@
   margin: 0;
   padding: 0px;
   box-sizing: border-box;
-  font-family: "Inter";
   font-style: normal;
-}
-
-body {
-  /* overflow: hidden; */
 }
 
 /* login start ======= */
@@ -163,9 +158,9 @@ header {
 /* navbar starts ======= */
 nav {
   display: flex;
-  align-items: center;
-  padding: 8px 30px 0 30px;
-  gap: 25px;
+  /* align-items: center; */
+  padding: 8px 30px 8px 30px;
+  /* gap: 25px; */
   border-bottom: 1px solid rgb(176, 176, 176);
 }
 .nav-link {
@@ -189,14 +184,62 @@ nav {
 }
 /* navbar ends =========================== */
 
+/* table starts ============================ */
+table {
+  width: 100%;
+  border-collapse: collapse;
+}
+table thead {
+  top: 0;
+  position: sticky;
+  z-index: 2;
+}
+table thead tr th {
+  text-align: center;
+  vertical-align: middle;
+  outline: 1px solid rgb(176, 176, 176) !important;
+  background-color: #64b6f7;
+  font-size: 0.9rem;
+  padding: 4px;
+}
+table tbody {
+  /* overflow-y: scroll;
+  height: 520px; */
+}
+table tbody tr td {
+  border: 1px solid rgb(176, 176, 176) !important;
+  padding: 6px;
+  font-size: 0.9rem;
+}
+table tfoot {
+  position: sticky;
+  width: 100%;
+  bottom: 0;
+}
+table tfoot tr td {
+  background: #f5f5f5;
+  outline: 1px solid rgb(176, 176, 176) !important;
+  padding: 4px;
+  font-size: 0.9rem;
+}
+table tbody tr:hover {
+  background-color: #e0e0e0;
+}
+table tbody tr td .more-icon {
+  display: none;
+}
+table tbody tr:hover td .more-icon {
+  display: block;
+}
+/* table ends ============================ */
+
 /* main starts ===== */
 main {
   display: flex;
-  overflow-y: scroll;
 }
 .main-left {
   padding: 0 30px;
-  width: 65%;
+  width: 100%;
 }
 .main-left-input {
   margin-top: 30px;
@@ -220,51 +263,11 @@ main {
   border: 1px solid rgba(0, 0, 0, 0.23);
   border-radius: 4px;
 }
-
 .main-right {
   width: 35%;
   height: 100vh;
   border: 1px solid rgb(176, 176, 176);
 }
-.main-right table {
-  width: 100%;
-  border-collapse: collapse;
-}
-
-.main-right th,
-.main-right td {
-  padding: 8px;
-  text-align: left;
-  outline: 1px solid rgb(176, 176, 176) !important;
-}
-.main-right td {
-  font-weight: 400;
-  font-size: 16px;
-  line-height: 24px;
-  letter-spacing: 0.15px;
-  text-transform: uppercase;
-  color: rgba(0, 0, 0, 0.87);
-}
-.main-right tr:hover {
-  background-color: #e0e0e0;
-  cursor: pointer;
-}
-.main-right tr td img {
-  display: none;
-}
-.main-right tr:hover td img {
-  display: block;
-}
-
-.main-right th {
-  background: #64b6f7;
-  font-weight: 600;
-  font-size: 16px;
-  line-height: 24px;
-  letter-spacing: 0.15px;
-  color: rgba(0, 0, 0, 0.87);
-}
-
 /* main ends ================================== */
 
 /* office modal starts =============== */
@@ -286,43 +289,6 @@ main {
   outline: none;
   width: 100%;
 }
-.modal-body table {
-  width: 100%;
-  border-collapse: collapse;
-}
-.modal-body th,
-.modal-body td {
-  padding: 8px;
-  text-align: left;
-  outline: 1px solid rgb(176, 176, 176) !important;
-}
-.modal-body td {
-  font-weight: 400;
-  font-size: 16px;
-  line-height: 24px;
-  letter-spacing: 0.15px;
-  text-transform: uppercase;
-  color: rgba(0, 0, 0, 0.87);
-}
-.modal-body tr:hover {
-  background-color: #e0e0e0;
-  cursor: pointer;
-}
-.modal-body tr td img {
-  display: none;
-}
-.modal-body tr:hover td img {
-  display: block;
-}
-
-.modal-body th {
-  background: #64b6f7;
-  font-weight: 600;
-  font-size: 16px;
-  line-height: 24px;
-  letter-spacing: 0.15px;
-  color: rgba(0, 0, 0, 0.87);
-}
 /* office modal ends =============== */
 
 /* navigation starts ======  */
@@ -330,6 +296,9 @@ main {
   width: 100%;
   border-bottom: 1px solid rgb(176, 176, 176);
   padding: 20px 30px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
 .navigation a {
   font-weight: 400;
@@ -357,57 +326,6 @@ main {
   height: 297px;
   overflow-y: scroll;
   margin-top: 10px;
-}
-
-.medicines table {
-  width: 100%;
-  border-collapse: collapse;
-}
-
-.medicines .table-head {
-  background: #64b6f7;
-  position: sticky;
-  top: 0;
-}
-
-.medicines table tr th {
-  text-align: center;
-  outline: 1px solid rgb(176, 176, 176) !important;
-}
-
-.medicines th,
-.medicines td {
-  padding: 8px;
-  text-align: left;
-  border: 1px solid rgb(176, 176, 176) !important;
-}
-
-.medicines td {
-  font-weight: 400;
-  font-size: 16px;
-  line-height: 24px;
-  letter-spacing: 0.15px;
-  text-transform: uppercase;
-  color: rgba(0, 0, 0, 0.87);
-}
-
-.medicines table tbody tr:hover {
-  background-color: #e0e0e0;
-  cursor: pointer;
-}
-
-.medicines table tbody tr td img {
-  display: none;
-}
-.medicines table tbody tr:hover td img {
-  display: block;
-}
-
-.table-footer td {
-  background-color: #f5f5f5 !important;
-  outline: 1px solid rgb(176, 176, 176) !important;
-  position: sticky;
-  bottom: 0;
 }
 /* medicines ends ====== */
 
@@ -514,44 +432,6 @@ main {
   height: 428px;
   overflow-y: scroll;
 }
-.income-first-table table {
-  width: 100%;
-  border-collapse: collapse;
-}
-.income-first-table table thead {
-  top: 0;
-  position: sticky;
-  z-index: 2;
-}
-.income-first-table table thead tr th {
-  text-align: center;
-  vertical-align: middle;
-  outline: 1px solid rgb(176, 176, 176) !important;
-  background-color: #64b6f7;
-}
-.income-first-table table tbody tr td {
-  border: 1px solid rgb(176, 176, 176) !important;
-  padding: 6px;
-}
-.income-first-table table tfoot {
-  position: sticky;
-  width: 100%;
-  bottom: 0;
-}
-.income-first-table table tfoot tr td {
-  background: #f5f5f5;
-  outline: 1px solid rgb(176, 176, 176) !important;
-  padding: 6px;
-}
-.income-first-table table tbody tr:hover {
-  background-color: #e0e0e0;
-}
-.income-first-table table tbody tr td .more-icon {
-  display: none;
-}
-.income-first-table table tbody tr:hover td .more-icon {
-  display: block;
-}
 /* income first table ends ======================= */
 
 /* income second table start ========================== */
@@ -561,47 +441,334 @@ main {
   overflow-y: scroll;
   margin-top: 20px;
 }
-.income-second-table table {
-  width: 100%;
-  border-collapse: collapse;
-}
-.income-second-table table thead {
-  top: 0;
-  position: sticky;
-  z-index: 2;
-}
-.income-second-table table thead tr th {
-  text-align: center;
-  vertical-align: middle;
-  outline: 1px solid rgb(176, 176, 176) !important;
-  background-color: #64b6f7;
-}
-.income-second-table table tbody tr td {
-  border: 1px solid rgb(176, 176, 176) !important;
-  padding: 6px;
-}
-.income-second-table table tfoot {
-  position: sticky;
-  width: 100%;
-  bottom: 0;
-}
-.income-second-table table tfoot tr td {
-  background: #f5f5f5;
-  outline: 1px solid rgb(176, 176, 176) !important;
-  padding: 6px;
-}
-.income-second-table table tbody tr:hover {
-  background-color: #e0e0e0;
-}
-.income-second-table table tbody tr td .more-icon {
-  display: none;
-}
-.income-second-table table tbody tr:hover td .more-icon {
-  display: block;
-}
-/* income second table ends ========================== */
-
 /* income ends ================== */
+
+/* report starts ========================= */
+.nav-bottom {
+  display: flex !important;
+  align-items: center !important;
+  justify-content: space-between !important;
+  gap: 18px;
+}
+.nav-bottom button {
+  padding: 14px;
+  background: rgba(0, 0, 0, 0.1);
+  border: 1px solid rgba(0, 0, 0, 0.23);
+  border-radius: 4px;
+}
+.nav-bottom .border-center {
+  background-color: rgba(0, 0, 0, 0.1);
+  width: 2px;
+  height: 55px;
+}
+nav .print-btn {
+  display: flex;
+  align-items: center;
+  padding: 6px 22px 6px 16px;
+  width: 134px;
+  height: 56.5px;
+  line-height: 18px;
+  gap: 8px;
+  background: #f5f5f5;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  border-radius: 4px;
+}
+/* report ends ========================= */
+
+/* F apteka income register  starts ============================= */
+.navigation-right {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+.navigation-right label {
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 20px;
+  letter-spacing: 0.15px;
+  color: rgba(0, 0, 0, 0.87);
+}
+.navigation-right input[type="checkbox"] {
+  margin-left: 20px;
+}
+.navigation-right button {
+  display: flex;
+  align-items: center;
+  padding: 8px 10px;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 28px;
+  letter-spacing: 0.15px;
+  background: rgba(0, 0, 0, 0.1);
+  border: 1px solid rgba(0, 0, 0, 0.23);
+  border-radius: 4px;
+  color: #000000;
+}
+
+/* F apteka income register  ends ============================= */
+/* F apteka receipt invoice  starts ============================= */
+.receipt-invoice-top {
+  display: flex;
+  align-items: center;
+  gap: 20px;
+  padding: 10px 30px;
+}
+.receipt-date {
+  display: flex;
+  align-items: center;
+  gap: 6px;
+}
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Firefox */
+input[type="number"] {
+  -moz-appearance: textfield;
+}
+.receipt-invoice-top input {
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 18px;
+  padding: 6px 10px;
+  color: rgba(0, 0, 0, 0.87);
+  border-radius: 4px;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  width: 158px;
+}
+.receipt-invoice-top label {
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 20px;
+  letter-spacing: 0.15px;
+  color: rgba(0, 0, 0, 0.87);
+}
+.invoice-filter {
+  display: flex;
+  align-items: center;
+  gap: 60px;
+  border-bottom: 1px solid rgb(176, 176, 176) !important;
+  padding: 10px 30px;
+  width: 100%;
+}
+
+.invoice-filter .invoice-filter-inputs {
+  display: flex;
+  /* align-items: center; */
+  gap: 8px;
+}
+.invoice-filter-inputs button {
+  padding: 14px;
+  background: rgba(0, 0, 0, 0.1);
+  border: 1px solid rgba(0, 0, 0, 0.23);
+  border-radius: 4px;
+}
+.organization-modal .modal {
+  --bs-modal-width: 800px !important;
+  --bs-modal-header-border-width: 0 !important;
+  --bs-modal-footer-border-width: 0 !important;
+  --bs-modal-padding: 30px 20px !important;
+}
+.organization-modal .modal button {
+  padding: 14px;
+  background: rgba(0, 0, 0, 0.1);
+  border: 1px solid rgba(0, 0, 0, 0.23);
+  border-radius: 4px;
+}
+.modal-foot {
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+  border: 1px solid rgba(145, 145, 145, 0.23);
+  padding: 8px;
+  margin-top: 48px;
+}
+.modal-foot button:nth-child(1) {
+  border: none;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 118px;
+  height: 36px;
+  background: #007dff;
+  box-shadow: 0px 3px 5px -2px rgba(0, 0, 0, 0.2),
+    0px 2px 3px rgba(0, 0, 0, 0.14), 0px 1px 5px rgba(0, 0, 0, 0.12);
+  border-radius: 4px;
+  color: white;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 14px;
+  letter-spacing: 0.5px;
+  text-transform: uppercase;
+}
+.modal-foot button:nth-child(2) {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 92px;
+  height: 36px;
+  background: #eeeeee;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  border-radius: 4px;
+  color: black;
+}
+.navigation-left {
+  display: flex;
+  align-items: center;
+  gap: 40px;
+}
+.navigation-left button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 8px;
+  width: 250px;
+  height: 40px;
+  background: #3397ff;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  border-radius: 4px;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 14px;
+  letter-spacing: 0.5px;
+  text-transform: uppercase;
+  color: #ffffff;
+}
+.navigation-right-product {
+  display: flex;
+  align-items: center;
+}
+.navigation-right-product input {
+  width: 211px;
+  letter-spacing: 0.5px;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  font-size: 14px;
+  font-weight: 500;
+  height: 40px;
+  border-radius: 4px;
+  padding: 6px 10px;
+}
+.navigation-right-product button {
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 14px;
+  letter-spacing: 0.5px;
+  text-transform: uppercase;
+  color: #ffffff;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 8px;
+  width: 211px;
+  height: 40px;
+  background: #3397ff;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  border-radius: 4px;
+  margin-left: 28px;
+}
+#kartaProduct {
+  --bs-modal-width: 778px !important;
+  border-radius: 0 !important;
+  /* --bs-modal-margin: auto !important; */
+  /* --bs-modal-margin: 1.75rem; */
+  --bs-modal-margin: 1.75rem;
+  --bs-modal-margin: 0.5rem;
+}
+.Coming .modal {
+  --bs-modal-width: 778px !important;
+}
+.Coming .modal-detail .modal {
+  --bs-modal-width: 100% !important;
+  border-radius: 0 !important;
+  --bs-modal-margin: 0 !important;
+}
+.Coming .modal-detail .modal .modal-content {
+  border-radius: 0 !important;
+}
+.Coming .modal-detail .modal .modal-body {
+  display: flex;
+  padding: 0 !important;
+}
+
+.Coming .modal-detail .modal .modal-body .modal-body-left {
+  background: #f5f5f5;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  width: 40%;
+  padding: 10px;
+}
+.Coming .modal-detail .modal-body .modal-body-right {
+  background-color: white;
+  width: 60%;
+}
+.modal-body-left table tbody tr {
+  display: flex;
+  /* align-items: center; */
+}
+.modal-body-left tbody tr:hover {
+  background-color: transparent;
+}
+.modal-body-left table tbody tr td {
+  border: none !important;
+  display: flex;
+  align-items: center;
+  gap: 12px;
+  width: 100%;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 20px;
+  letter-spacing: 0.15px;
+  color: rgba(0, 0, 0, 0.87);
+}
+#kartaProduct table tbody tr {
+  display: flex;
+  /* align-items: center; */
+}
+#kartaProduct tbody tr:hover {
+  background-color: transparent;
+}
+#kartaProduct table tbody tr td {
+  padding: 0 !important;
+  border: none !important;
+  display: flex;
+  align-items: center;
+  gap: 12px;
+  width: 100%;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 20px;
+  letter-spacing: 0.15px;
+  color: rgba(0, 0, 0, 0.87);
+}
+.modal-body-left {
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 20px;
+  letter-spacing: 0.15px;
+  color: black;
+}
+
+.modal-body-left table tbody tr td input {
+  background-color: transparent;
+}
+.modal-body-left table tbody tr td button {
+  padding: 8px;
+  background: rgba(0, 0, 0, 0.1);
+  border: 1px solid rgba(0, 0, 0, 0.23);
+  border-radius: 4px;
+}
+
+#kartaProduct table tbody tr td input {
+  background-color: transparent;
+}
+#kartaProduct table tbody tr td button {
+  padding: 8px;
+  background: rgba(0, 0, 0, 0.1);
+  border: 1px solid rgba(0, 0, 0, 0.23);
+  border-radius: 4px;
+}
 
 @media screen and (min-width: 768px) and (max-width: 1187px) {
   /* login starts ==== */
